Add "ALL" action Get rid of unnecessary cache, save groups into spring auth Review fixes